--- a/Projects/Ayensukrom.html
+++ b/Projects/Ayensukrom.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <link rel="apple-touch-icon" sizes="180x180" href="/images/icon/apple-touch-icon.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="/images/icon/favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="/images/icon/favicon-16x16.png">
-    <link rel="manifest" href="/images/icon/site.webmanifest">
+    <link rel="apple-touch-icon" sizes="180x180" href="images/icon/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="images/icon/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="images/icon/favicon-16x16.png">
+    <link rel="manifest" href="images/icon/site.webmanifest">
     <title>Le Shelter Foundation</title>
 
     <!-- Required meta tags -->
@@ -72,7 +72,7 @@
           <div class="row">
             <div class="col-12 d-flex flex-wrap justify-content-between mb-2 align-items-center">
               <div class="site-branding d-flex align-items-center">
-                <a class="d-block" href="/index.html" rel="home"><img class="d-block" src="/images/Logo.png" href="index.html" alt="logo"></a>
+                <a class="d-block" href="/index.html" rel="home"><img class="d-block" src="images/Logo.png" href="index.html" alt="logo"></a>
               </div><!-- .site-branding -->
   
               <nav  class="site-navigation d-flex justify-content-end align-items-center">
@@ -116,7 +116,7 @@
       <div class="modal-content">
         <span class="close-btn">&times;</span>
         <img
-          src="/images/Logo.png"
+          src="images/Logo.png"
           style="height: 80px; width: 250px"
         />
         <!-- <p>Here are the details for making your donation:</p> -->
@@ -126,7 +126,7 @@
           <div class="momo-details">
             <div class="momo-item">
               <img
-                src="/images/mtnlogo.png"
+                src="images/mtnlogo.png"
                 alt="MTN Mobile Money"
                 class="momo-logo"
               />
@@ -141,7 +141,7 @@
           <div class="momo-details">
             <div class="momo-item">
               <img
-                src="/images/food-donation.png"
+                src="images/food-donation.png"
                 alt="MTN Mobile Money"
                 class="momo-logo"
               />
@@ -170,7 +170,7 @@
           <main id="main" class="col-md-8 ">
             <div class="article causes-details">
               <div class="article-img mt-5">
-                <img src="/images/1.jpg" alt="" />
+                <img src="images/1.jpg" alt="" />
               </div>
               <div class="article-content">
                 <h2 class="article-title"><strong>Ayensukrom M/A School</strong></h2> 
@@ -202,12 +202,12 @@
 
               <!-- Lightbox -->
               <div class="photo-viewer">
-                <img src="/images/1.jpg" alt="Image 1" onclick="openLightbox(0)">
-                <img src="/images/2.jpg" alt="Image 2" onclick="openLightbox(1)">
-                <img src="/images/3.jpg" alt="Image 3" onclick="openLightbox(2)">
-                <!-- <img src="/images/15.jpg" alt="Image 4" onclick="openLightbox(3)">
-                <img src="/images/20.jpg" alt="Image 5" onclick="openLightbox(4)">
-                <img src="/images/53.jpg" alt="Image 6" onclick="openLightbox(5)"> -->
+                <img src="images/1.jpg" alt="Image 1" onclick="openLightbox(0)">
+                <img src="images/2.jpg" alt="Image 2" onclick="openLightbox(1)">
+                <img src="images/3.jpg" alt="Image 3" onclick="openLightbox(2)">
+                <!-- <img src="images/15.jpg" alt="Image 4" onclick="openLightbox(3)">
+                <img src="images/20.jpg" alt="Image 5" onclick="openLightbox(4)">
+                <img src="images/53.jpg" alt="Image 6" onclick="openLightbox(5)"> -->
               </div>
              
               <div id="lightbox" class="lightbox">
@@ -242,7 +242,7 @@
               <div class="widget-post">
                 <a href="Asiafo.html">
                   <div class="widget-img">
-                    <img src="/images/1.jpg" alt="" />
+                    <img src="images/1.jpg" alt="" />
                   </div>
                   <div class="widget-content">
                     <span>Asiafo Amanfro M/A School</span>
@@ -255,7 +255,7 @@
               <div class="widget-post">
                 <a href="Asutsuare.html">
                   <div class="widget-img">
-                    <img src="/images/1.jpg" alt="" />
+                    <img src="images/1.jpg" alt="" />
                   </div>
                   <div class="widget-content">
                     <span>Asutsuare Estate D/A School</span>
@@ -268,7 +268,7 @@
               <div class="widget-post">
                 <a href="Pokrom.html">
                   <div class="widget-img">
-                    <img src="/images/2.jpg" alt="" />
+                    <img src="images/2.jpg" alt="" />
                   </div>
                   <div class="widget-content">
                     <span>Pokrom M/A Junior High School</span>
@@ -280,7 +280,7 @@
               <div class="widget-post">
                 <a href="Bunso.html">
                   <div class="widget-img">
-                    <img src="/images/20.jpg" alt="" />
+                    <img src="images/20.jpg" alt="" />
                   </div>
                   <div class="widget-content">
                     <span>Bunso M/A School</span>
@@ -291,7 +291,7 @@
               <div class="widget-post">
                 <a href="Dzita.html">
                   <div class="widget-img">
-                    <img src="/images/1.jpg" alt="" />
+                    <img src="images/1.jpg" alt="" />
                   </div>
                   <div class="widget-content">
                     <span>Dzita Learning Comm. School</span>
@@ -303,7 +303,7 @@
               <div class="widget-post">
                 <a href="Kwamo.html">
                   <div class="widget-img">
-                    <img src="/images/1.jpg" alt="" />
+                    <img src="images/1.jpg" alt="" />
                   </div>
                   <div class="widget-content">
                     <span>Kwamo M/A School</span>
@@ -328,7 +328,7 @@
             <div class="col-12 col-lg-5 col-md-6">
               <div class="footer-logo">
                 <a class="logo" href="/index.html">
-                  <img src="/images/Logo.png" alt=""></a>
+                  <img src="images/Logo.png" alt=""></a>
               </div>
               
             </div>
