--- a/Projects/Projects.html
+++ b/Projects/Projects.html
@@ -352,7 +352,7 @@
             <div class="col-12 col-lg-5">
               <div class="footer-logo">
                 <a class="logo" href="#">
-                  <img src="/images/Logo.png" alt=""></a>
+                  <img src="images/Logo.png" alt=""></a>
               </div>
               <div class=" pt-3">
                 <ul class="footer-social">
