--- a/index.html
+++ b/index.html
@@ -411,7 +411,7 @@
                       
                     </p>
                     <div class="entry-footer mt-5">
-                      <a  class="btn gradient-bg mr-2" href="/Projects.html">Read More</a>
+                      <a  class="btn gradient-bg mr-2" href="Projects.html">Read More</a>
                     </div>
                   </div>
                   <!-- .entry-content -->
@@ -443,7 +443,7 @@
                     class="entry-header d-flex flex-wrap align-items-center"
                   >
                     <h3 class="entry-title w-100  m-0">
-                      <a href="/Projects/Asiafo.html">Asiafo Amanfro M/A School</a>
+                      <a href="Projects/Asiafo.html">Asiafo Amanfro M/A School</a>
                     </h3>
 
                     <div class="posted-date">
@@ -485,7 +485,7 @@
                     class="entry-header d-flex flex-wrap align-items-center"
                   >
                     <h3 class="entry-title w-100 m-0">
-                      <a href="/Projects/Asutsuare.html">Asutsuare Estate D/A School</a>
+                      <a href="Projects/Asutsuare.html">Asutsuare Estate D/A School</a>
                     </h3>
 
                     <div class="posted-date">
@@ -527,7 +527,7 @@
                     class="entry-header d-flex flex-wrap align-items-center"
                   >
                     <h3 class="entry-title w-100 m-0">
-                      <a href="/Projects/Pokrom.html">Pokrom M/A JHS </a>
+                      <a href="Projects/Pokrom.html">Pokrom M/A JHS </a>
                     </h3>
 
                     <div class="posted-date">
