--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
           <!-- Carousel Item 2 -->
           <div class="carousel-item">
             <img
-            src="images/IMG_6657.JPG"
+            src="images/IMG_6657.jpg"
               class="d-block w-100"
               alt="Image 2"
             />
@@ -357,7 +357,7 @@
                   </div>
               </div>
               <div class="col-12 col-lg-6 mt-4 mt-lg-0 order-2 order-lg-2">
-                  <img src="images/DJI_0036.JPG" alt="welcome" class="welcome-image" />
+                  <img src="images/DJI_0036.jpg" alt="welcome" class="welcome-image" />
               </div>
           </div>
       </div>
@@ -435,7 +435,7 @@
 
               <div class="event-wrap d-flex flex-wrap justify-content-between">
                 <figure class="m-0">
-                  <img src="images/34.JPG" alt="" />
+                  <img src="images/34.jpg" alt="" />
                 </figure>
 
                 <div class="event-content-wrap">
@@ -519,7 +519,7 @@
 
               <div class="event-wrap d-flex flex-wrap justify-content-between">
                 <figure class="m-0">
-                  <img src="images/IMG_7044.JPG" alt="" />
+                  <img src="images/IMG_7044.jpg" alt="" />
                 </figure>
 
                 <div class="event-content-wrap">
@@ -596,7 +596,7 @@
               <div class="carousel-inner">
                 <!-- Slide 1 -->
                 <div class="carousel-item active">
-                  <img src="images/IMG_6743.JPG" class="d-block w-100" alt="..." />
+                  <img src="images/IMG_6743.jpg" class="d-block w-100" alt="..." />
                   <div class="carousel-caption d-none d-md-block">
                     <!-- <h5>First Slide</h5> -->
                   </div>
