--- a/contact.html
+++ b/contact.html
@@ -173,7 +173,8 @@
                     </header></div>
                     <div class="entry-content  mr-5">
                           
-                        <p>By fostering partnerships with local leaders, international organizations, and compassionate individuals, we continue to expand our reach and deepen our impact. We’d love to hear from you!</p>
+                        <p>By fostering partnerships with local leaders, international organizations, and compassionate individuals, we continue to expand our reach and deepen our impact. </p>
+                        <p>We’d love to hear from you!</p>
   
                         <p>If you’re interested in learning more about our work, collaborating with us, or supporting our mission, feel free to reach out. Together, we can make a meaningful difference in the lives of those we serve.</p>
                          
