--- a/index.html
+++ b/index.html
@@ -357,7 +357,7 @@
                   </div>
               </div>
               <div class="col-12 col-lg-6 mt-4 mt-lg-0 order-2 order-lg-2">
-                  <img src="images/DJI_0036.jpg" alt="welcome" class="welcome-image" />
+                  <img src="images/1.jpg" alt="welcome" class="welcome-image" />
               </div>
           </div>
       </div>
