project page link

--- a/Projects/Asiafo.html
+++ b/Projects/Asiafo.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <link rel="apple-touch-icon" sizes="180x180" href="images/icon/apple-touch-icon.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="images/icon/favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="images/icon/favicon-16x16.png">
-    <link rel="manifest" href="images/icon/site.webmanifest">
+    <link rel="apple-touch-icon" sizes="180x180" href="./images/icon/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="./images/icon/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="./images/icon/favicon-16x16.png">
+    <link rel="manifest" href="./images/icon/site.webmanifest">
     <title>Le Shelter Foundation</title>
 
     <!-- Required meta tags -->
@@ -15,23 +15,23 @@
     />
 
     <!-- Bootstrap CSS -->
-    <link rel="stylesheet" href="/css/bootstrap.min.css" />
+    <link rel="stylesheet" href="./css/bootstrap.min.css" />
 
     <!-- FontAwesome CSS -->
-    <link rel="stylesheet" href="/css/font-awesome.min.css" />
+    <link rel="stylesheet" href="./css/font-awesome.min.css" />
 
     <!-- ElegantFonts CSS -->
-    <link rel="stylesheet" href="/css/elegant-fonts.css" />
+    <link rel="stylesheet" href="./css/elegant-fonts.css" />
 
     <!-- themify-icons CSS -->
-    <link rel="stylesheet" href="/css/themify-icons.css" />
+    <link rel="stylesheet" href="./css/themify-icons.css" />
 
     <!-- Swiper CSS -->
-    <link rel="stylesheet" href="/css/swiper.min.css" />
+    <link rel="stylesheet" href="./css/swiper.min.css" />
 
     
     <!-- Styles -->
-    <link rel="stylesheet" href="/Styless.css" />
+    <link rel="stylesheet" href="./Styless.css" />
     <link
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.css"
