--- a/Projects/Asiafo.html
+++ b/Projects/Asiafo.html
@@ -72,7 +72,7 @@
           <div class="row">
             <div class="col-12 d-flex flex-wrap justify-content-between mb-2 align-items-center">
               <div class="site-branding d-flex align-items-center">
-                <a class="d-block" href="../index.html" rel="home"><img class="d-block" src="images/Logo.png" href="/..index.html" alt="logo"></a>
+                <a class="d-block" href="../index.html" rel="home"><img class="d-block" src="../images/Logo.png" href="../index.html" alt="logo"></a>
               </div><!-- .site-branding -->
   
               <nav  class="site-navigation d-flex justify-content-end align-items-center">
@@ -205,9 +205,9 @@
                 <img src="../images/1.jpg" alt="Image 1" onclick="openLightbox(0)">
                 <img src="../images/2.jpg" alt="Image 2" onclick="openLightbox(1)">
                 <img src="../images/3.jpg" alt="Image 3" onclick="openLightbox(2)">
-                <!-- <img src="images/15.jpg" alt="Image 4" onclick="openLightbox(3)">
-                <img src="images/20.jpg" alt="Image 5" onclick="openLightbox(4)">
-                <img src="images/53.jpg" alt="Image 6" onclick="openLightbox(5)"> -->
+                <img src="images/15.jpg" alt="Image 4" onclick="openLightbox(3)">
+                <!-- <img src="images/20.jpg" alt="Image 5" onclick="openLightbox(4)"> -->
+                <!-- <img src="images/53.jpg" alt="Image 6" onclick="openLightbox(5)"> --> -->
               </div>
              
               <div id="lightbox" class="lightbox">
