projects link fix

--- a/Projects.html
+++ b/Projects.html
@@ -212,7 +212,7 @@
                               lasting impact.
                             </p>
                            <div class="text-center donate-btn mt-5">
-                            <a class="primary-button donate-btn" data-modal="donateModal1">Donate</a>
+                            <a class="primary-button donate-btn" data-modal="donateModal1"> Support Us </a>
                           </div><!-- .donate-btn -->
                             </div><!-- .col -->
                           </div><!-- .entry-content -->
