--- a/Projects/Asiafo.html
+++ b/Projects/Asiafo.html
@@ -205,7 +205,7 @@
                 <img src="../images/1.jpg" alt="Image 1" onclick="openLightbox(0)">
                 <img src="../images/2.jpg" alt="Image 2" onclick="openLightbox(1)">
                 <img src="../images/3.jpg" alt="Image 3" onclick="openLightbox(2)">
-                <img src="images/15.jpg" alt="Image 4" onclick="openLightbox(3)">
+                <img src="../images/15.jpg" alt="Image 4" onclick="openLightbox(3)">
                 <!-- <img src="images/20.jpg" alt="Image 5" onclick="openLightbox(4)"> -->
                 <!-- <img src="images/53.jpg" alt="Image 6" onclick="openLightbox(5)"> --> -->
               </div>
