--- a/Projects/Ayensukrom.html
+++ b/Projects/Ayensukrom.html
@@ -207,7 +207,7 @@
                 <img src="../images/3.jpg" alt="Image 3" onclick="openLightbox(2)">
                 <img src="../images/15.jpg" alt="Image 4" onclick="openLightbox(3)">
                 <!-- <img src="images/20.jpg" alt="Image 5" onclick="openLightbox(4)"> -->
-                <!-- <img src="images/53.jpg" alt="Image 6" onclick="openLightbox(5)"> --> -->
+                <!-- <img src="images/53.jpg" alt="Image 6" onclick="openLightbox(5)"> -->
               </div>
              
               <div id="lightbox" class="lightbox">
@@ -240,7 +240,7 @@
             <div class="widget mt-5 ">
               <h3 class="widget-title">Latest Posts</h3>
               <div class="widget-post">
-                <a href="/Asiafo.html">
+                <a href="Asiafo.html">
                   <div class="widget-img">
                     <img src="../images/1.jpg" alt="" />
                   </div>
@@ -253,7 +253,7 @@
 
               <!-- single post -->
               <div class="widget-post">
-                <a href="/Asutsuare.html">
+                <a href="Asutsuare.html">
                   <div class="widget-img">
                     <img src="../images/1.jpg" alt="" />
                   </div>
@@ -266,7 +266,7 @@
 
               <!-- single post -->
               <div class="widget-post">
-                <a href="/Pokrom.html">
+                <a href="Pokrom.html">
                   <div class="widget-img">
                     <img src="../images/2.jpg" alt="" />
                   </div>
@@ -278,7 +278,7 @@
 
               <!-- single post -->
               <div class="widget-post">
-                <a href="/Bunso.html">
+                <a href="Bunso.html">
                   <div class="widget-img">
                     <img src="../images/20.jpg" alt="" />
                   </div>
@@ -289,7 +289,7 @@
               </div>
 
               <div class="widget-post">
-                <a href="/Dzita.html">
+                <a href="Dzita.html">
                   <div class="widget-img">
                     <img src="../images/1.jpg" alt="" />
                   </div>
@@ -301,7 +301,7 @@
 
 
               <div class="widget-post">
-                <a href="/Kwamo.html">
+                <a href="Kwamo.html">
                   <div class="widget-img">
                     <img src="../images/1.jpg" alt="" />
                   </div>
