replace converted images

--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
           <!-- Carousel Item 1 -->
           <div class="carousel-item active">
             <img
-              src="images/15.jpg"
+              src="images/image42.webp"
               class="d-block w-100"
               alt="Image 1"
             />
@@ -119,7 +119,7 @@
           <!-- Carousel Item 2 -->
           <div class="carousel-item">
             <img
-            src="images/IMG_6657.jpg"
+            src="images/image41.webp"
               class="d-block w-100"
               alt="Image 2"
             />
@@ -357,7 +357,7 @@
                   </div>
               </div>
               <div class="col-12 col-lg-6 mt-4 mt-lg-0 order-2 order-lg-2">
-                  <img src="images/mission.JPG" alt="welcome" class="welcome-image" />
+                  <img src="images/mission.webp" alt="welcome" class="welcome-image" />
               </div>
           </div>
       </div>
@@ -435,7 +435,7 @@
 
               <div class="event-wrap d-flex flex-wrap justify-content-between">
                 <figure class="m-0">
-                  <img src="images/34.jpg" alt="" />
+                  <img src="images/image66.webp" alt="" />
                 </figure>
 
                 <div class="event-content-wrap">
@@ -477,7 +477,7 @@
 
               <div class="event-wrap d-flex flex-wrap justify-content-between">
                 <figure class="m-0">
-                  <img src="images/53.jpg" alt="" />
+                  <img src="images/image68.webp" alt="" />
                 </figure>
 
                 <div class="event-content-wrap">
@@ -519,7 +519,7 @@
 
               <div class="event-wrap d-flex flex-wrap justify-content-between">
                 <figure class="m-0">
-                  <img src="images/IMG_7044.jpg" alt="" />
+                  <img src="images/image77.webp" alt="" />
                 </figure>
 
                 <div class="event-content-wrap">
@@ -596,14 +596,14 @@
               <div class="carousel-inner">
                 <!-- Slide 1 -->
                 <div class="carousel-item active">
-                  <img src="images/IMG_6743.jpg" class="d-block w-100" alt="..." />
+                  <img src="images/image81.webp" class="d-block w-100" alt="..." />
                   <div class="carousel-caption d-none d-md-block">
                     <!-- <h5>First Slide</h5> -->
                   </div>
                 </div>
                 <!-- Slide 2 -->
                 <div class="carousel-item">
-                  <img src="images/49.jpg" class="d-block w-100" alt="..." />
+                  <img src="images/image78.webp" class="d-block w-100" alt="..." />
                   <div class="carousel-caption d-none d-md-block">
                     <!-- <h5>Second Slide</h5> -->
                   </div>
@@ -611,7 +611,7 @@
                 <!-- Slide 3 -->
                 <div class="carousel-item">
                   <img
-                    src="https://t4.ftcdn.net/jpg/05/52/87/95/360_F_552879503_R4JNYEwQEeWJqvvD72chM5PLGUUlfb1o.jpg"
+                    src="images/Thanks.jpg"
                     class="d-block w-100"
                     alt="..."
                   />
