--- a/Projects.html
+++ b/Projects.html
@@ -251,7 +251,7 @@
                 <div class="article">
                   <div class="article-img">
                     <a href="Projects/Asiafo.html">
-                      <img src="images/1.jpg" alt="">
+                      <img src="images/image26.webp" alt="">
                     </a>
                   </div>
                   <div class="article-content">
@@ -271,7 +271,7 @@
                   <div class="article">
                     <div class="article-img">
                       <a href="Projects/Asutsuare.html">
-                        <img src="images/2.jpg" alt="">
+                        <img src="images/image53.webp" alt="">
                       </a>
                     </div>
                     <div class="article-content">
@@ -291,7 +291,7 @@
                     <div class="article">
                       <div class="article-img">
                         <a href="Projects/Pokrom.html">
-                          <img src="images/3.jpg" alt="">
+                          <img src="images/image64.webp" alt="">
                         </a>
                       </div>
                       <div class="article-content">
@@ -311,7 +311,7 @@
                       <div class="article">
                         <div class="article-img">
                           <a href="Projects/Bunso.html">
-                            <img src="images/20.jpg" alt="">
+                            <img src="images/image44.webp" alt="">
                           </a>
                         </div>
                         <div class="article-content">
@@ -331,7 +331,7 @@
                         <div class="article">
                           <div class="article-img">
                             <a href="Projects/Dzita.html">
-                              <img src="images/53.jpg" alt="">
+                              <img src="images/image72.webp" alt="">
                             </a>
                           </div>
                           <div class="article-content">
@@ -351,7 +351,7 @@
                           <div class="article">
                             <div class="article-img">
                               <a href="Projects/Dzita.html">
-                                <img src="images/15.jpg" alt="">
+                                <img src="images/image34.webp" alt="">
                               </a>
                             </div>
                             <div class="article-content">
