--- a/about.html
+++ b/about.html
@@ -203,7 +203,7 @@
           <!-- .col -->
 
           <div class="col-12 col-lg-6 order-1 order-lg-2">
-            <img src="images/1.jpg" alt="welcome" />
+            <img src="images/image43.webp" alt="welcome" />
           </div>
           <!-- .col -->
         </div>
