--- a/about.html
+++ b/about.html
@@ -264,7 +264,7 @@
         <!-- Team Member 3 -->
         <div class="team-card">
           <div class="member-image">
-            <img src="images/Ruby1.jpg" alt="Ruby Offeibea Adu" loading="lazy" />
+            <img src="images/Joana.jpg" alt="Joana Attafuah" loading="lazy" />
           </div>
           <div class="member-info">
             <h3>Joana Attafuah</h3>
@@ -433,7 +433,7 @@
             <div class="swiper-slide">
               <div class="testimonial-card">
                 <div class="volunteer-image">
-                  <img src="images/Solomon.jpg" alt="Volunteer 1" />
+                  <img src="images/Ivy.jpg" alt="Volunteer 1" />
                 </div>
                 <h3 class="volunteer-name">Ivy Dordaa</h3>
                 <p class="testimonial-text">
@@ -448,9 +448,9 @@
             <div class="swiper-slide">
               <div class="testimonial-card">
                 <div class="volunteer-image">
-                  <img src="images/Ruby.jpg" alt="Volunteer 1" />
+                  <img src="images/Isaac.jpg" alt="Volunteer 1" />
                 </div>
-                <h3 class="volunteer-name">Joshua Otu</h3>
+                <h3 class="volunteer-name">Isaac</h3>
                 <p class="testimonial-text">
                   Joining Le Shelter Foundation as a volunteer has been an eye-opening experience.
                   Le Shelter Foundation has not only empowered the communities we serve 
@@ -463,7 +463,7 @@
             <div class="swiper-slide">
               <div class="testimonial-card">
                 <div class="volunteer-image">
-                  <img src="images/princess.jpg" alt="Volunteer 1" />
+                  <img src="images/Priscilla.jpg" alt="Volunteer 1" />
                 </div>
                 <h3 class="volunteer-name">Priscilla Quansah</h3>
                 <p class="testimonial-text">
