--- a/Projects/Asiafo.html
+++ b/Projects/Asiafo.html
@@ -170,7 +170,7 @@
           <main id="main" class="col-md-8 ">
             <div class="article causes-details">
               <div class="article-img mt-5">
-                <img src="../images/1.jpg" alt="" />
+                <img src="../images/image66.webp" alt="" />
               </div>
               <div class="article-content">
                 <h2 class="article-title"><strong>Asiafo Amanfro M/A School</strong></h2> 
@@ -202,10 +202,10 @@
 
               <!-- Lightbox -->
               <div class="photo-viewer">
-                <img src="../images/1.jpg" alt="Image 1" onclick="openLightbox(0)">
-                <img src="../images/2.jpg" alt="Image 2" onclick="openLightbox(1)">
-                <img src="../images/3.jpg" alt="Image 3" onclick="openLightbox(2)">
-                <img src="../images/15.jpg" alt="Image 4" onclick="openLightbox(3)">
+                <img src="../images/image38.webp" alt="Image 1" onclick="openLightbox(0)">
+                <img src="../images/image36.webp" alt="Image 2" onclick="openLightbox(1)">
+                <img src="../images/image20.webp" alt="Image 3" onclick="openLightbox(2)">
+                <img src="../images/image13.webp" alt="Image 4" onclick="openLightbox(3)">
                 <!-- <img src="images/20.jpg" alt="Image 5" onclick="openLightbox(4)"> -->
                 <!-- <img src="images/53.jpg" alt="Image 6" onclick="openLightbox(5)"> --> 
               </div>
@@ -225,9 +225,9 @@
               <div class="mt-3">
                 <div class="social-links">
                   <a class="mt-1">SHARE:</a>
-                  <a href="https://www.facebook.com" target="_blank" class="social-icon" aria-label="LinkedIn"><i class="fab fa-facebook-f"></i></a>
-                  <a href="https://www.tiktok.com" target="_blank" class="social-icon" aria-label="LinkedIn"><i class="fab fa-tiktok"></i></a>
-                  <a href="https://x.com" target="_blank" class="social-icon" aria-label="LinkedIn"><i class="fa fa-twitter"></i></a>
+                  <a href="https://www.facebook.com" target="_blank" rel="noopener noreferrer" class="social-icon" aria-label="LinkedIn"><i class="fab fa-facebook-f"></i></a>
+                  <a href="https://www.tiktok.com" target="_blank" rel="noopener noreferrer" class="social-icon" aria-label="LinkedIn"><i class="fab fa-tiktok"></i></a>
+                  <a href="https://x.com" target="_blank" rel="noopener noreferrer" class="social-icon" aria-label="LinkedIn"><i class="fa fa-twitter"></i></a>
                   <a href="https://www.instagram.com" target="blank" class="social-icon" aria-label="Website"><i class="fab fa-instagram"></i></a>
                 </div>
               </div>
@@ -242,7 +242,7 @@
               <div class="widget-post">
                 <a href="Asutsuare.html">
                   <div class="widget-img">
-                    <img src="../images/1.jpg" alt="" />
+                    <img src="../images/image70.webp" alt="" />
                   </div>
                   <div class="widget-content">
                     <span>Asutsuare Estate D/A School</span>
@@ -255,7 +255,7 @@
               <div class="widget-post">
                 <a href="Pokrom.html">
                   <div class="widget-img">
-                    <img src="../images/2.jpg" alt="" />
+                    <img src="../images/image11.webp" alt="" />
                   </div>
                   <div class="widget-content">
                     <span>Pokrom M/A Junior High School</span>
@@ -267,7 +267,7 @@
               <div class="widget-post">
                 <a href="Bunso.html">
                   <div class="widget-img">
-                    <img src="../images/20.jpg" alt="" />
+                    <img src="../images/image44.webp" alt="" />
                   </div>
                   <div class="widget-content">
                     <span>Bunso M/A School</span>
@@ -279,7 +279,7 @@
               <div class="widget-post">
                 <a href="Ayensukrom.html">
                   <div class="widget-img">
-                    <img src="../images/1.jpg" alt="" />
+                    <img src="../images/image15.webp" alt="" />
                   </div>
                   <div class="widget-content">
                     <span>Ayensukrom M/A School</span>
@@ -290,7 +290,7 @@
               <div class="widget-post">
                 <a href="Dzita.html">
                   <div class="widget-img">
-                    <img src="../images/1.jpg" alt="" />
+                    <img src="../images/image32.webp" alt="" />
                   </div>
                   <div class="widget-content">
                     <span>Dzita Learning Comm. School</span>
@@ -302,7 +302,7 @@
               <div class="widget-post">
                 <a href="Kwamo.html">
                   <div class="widget-img">
-                    <img src="../images/1.jpg" alt="" />
+                    <img src="../images/image46.webp" alt="" />
                   </div>
                   <div class="widget-content">
                     <span>Kwamo M/A School</span>
@@ -351,10 +351,10 @@
                 <div>
                   <ul class="footer-social">
                     <strong>
-                    <li><h1><a class="footer-icon" href="https://www.facebook.com/profile.php?id=100067770571763" target="_blank" rel="facebook"><i class="fab fa-facebook"></i></a></h1></li>
-                    <li><h1><a class="footer-icon" href="https://www.tiktok.com/@le.shelter.founda?_t=ZM-8sl65FqR7XZ&_r=1" target="_blank" rel="tiktok" ><i class="fab fa-tiktok"></i></a></h1></li>
-                    <li><h1><a class="footer-icon" href="https://x.com/le_shelter?t=dWlkQidVKnRSYGSbFpbjHg&s=09" target="_blank" rel="twitter"><i class="fa fa-twitter"></i></a></h1></li>
-                    <li><h1><a class="footer-icon" href="https://www.instagram.com/le.shelter.foundation?igsh=bGxneno2OTN5NjF5" target="_blank" rel="instagram"><i class="fab fa-instagram"></i></a></h1></li>
+                    <li><h1><a class="footer-icon" href="https://www.facebook.com/profile.php?id=100067770571763" target="_blank" rel="noopener noreferrer"><i class="fab fa-facebook"></i></a></h1></li>
+                    <li><h1><a class="footer-icon" href="https://www.tiktok.com/@le.shelter.founda?_t=ZM-8sl65FqR7XZ&_r=1" target="_blank" rel="noopener noreferrer" ><i class="fab fa-tiktok"></i></a></h1></li>
+                    <li><h1><a class="footer-icon" href="https://x.com/le_shelter?t=dWlkQidVKnRSYGSbFpbjHg&s=09" target="_blank" rel="noopener noreferrer"><i class="fa fa-twitter"></i></a></h1></li>
+                    <li><h1><a class="footer-icon" href="https://www.instagram.com/le.shelter.foundation?igsh=bGxneno2OTN5NjF5" target="_blank" rel="noopener noreferrer"><i class="fab fa-instagram"></i></a></h1></li>
                     </strong>
                   </ul>
                 </div>
@@ -362,7 +362,7 @@
                 
                   <form class="footer-volunteer">
                     <button class="footer-button">
-                      <h6 class="mt-2"><strong><a href="https://docs.google.com/forms/d/e/1FAIpQLSf8BNb_TOu1TX99yPvh-6kXlTA_dcG3nNBWbJJK5OmTPgmAxQ/viewform?pli=1" target="_blank" >
+                      <h6 class="mt-2"><strong><a href="https://docs.google.com/forms/d/e/1FAIpQLSf8BNb_TOu1TX99yPvh-6kXlTA_dcG3nNBWbJJK5OmTPgmAxQ/viewform?pli=1" target="_blank" rel="noopener noreferrer" >
                         ❤️ Become A Volunteer ❤️</a></strong></h6>
                     </button>
                   </form>
