--- a/Projects/Kwamo.html
+++ b/Projects/Kwamo.html
@@ -202,12 +202,12 @@
 
               <!-- Lightbox -->
               <div class="photo-viewer">
-                <img src="../images/1.jpg" alt="Image 1" onclick="openLightbox(0)">
-                <img src="../images/2.jpg" alt="Image 2" onclick="openLightbox(1)">
-                <img src="../images/3.jpg" alt="Image 3" onclick="openLightbox(2)">
-                <img src="../images/15.jpg" alt="Image 4" onclick="openLightbox(3)">
+                <img src="../images/image38.webp" alt="Image 1" onclick="openLightbox(0)">
+                <img src="../images/image36.webp" alt="Image 2" onclick="openLightbox(1)">
+                <img src="../images/image20.webp" alt="Image 3" onclick="openLightbox(2)">
+                <img src="../images/image13.webp" alt="Image 4" onclick="openLightbox(3)">
                 <!-- <img src="images/20.jpg" alt="Image 5" onclick="openLightbox(4)"> -->
-                <!-- <img src="images/53.jpg" alt="Image 6" onclick="openLightbox(5)"> -->
+                <!-- <img src="images/53.jpg" alt="Image 6" onclick="openLightbox(5)"> --> 
               </div>
              
               <div id="lightbox" class="lightbox">
@@ -217,7 +217,39 @@
                 <button class="next" onclick="nextImage()">&#10095;</button>
               </div>
 
-              <script src="../js/photo.js"></script>
+              <script>
+                const images = [
+                    "../images/image38.webp",
+                    "../images/image36.webp",
+                    "../images/image20.webp",
+                    "../images/image13.webp",
+                    "../images/image26.webp",
+                    "../images/image18.webp"
+                ];
+
+                  let currentIndex = 0;
+
+                  function openLightbox(index) {
+                      currentIndex = index;
+                      document.getElementById('lightbox-img').src = images[currentIndex];
+                      document.getElementById('lightbox').style.display = "flex";
+                  }
+
+                  function closeLightbox() {
+                      document.getElementById('lightbox').style.display = "none";
+                  }
+
+                  function nextImage() {
+                      currentIndex = (currentIndex + 1) % images.length; // Loops back to first image
+                      document.getElementById('lightbox-img').src = images[currentIndex];
+                  }
+
+                  function prevImage() {
+                      currentIndex = (currentIndex - 1 + images.length) % images.length; // Loops to last image if at the first one
+                      document.getElementById('lightbox-img').src = images[currentIndex];
+                  }
+
+              </script>
 
               <!-- Lightbox -->
 
@@ -225,9 +257,9 @@
               <div class="mt-3">
                 <div class="social-links">
                   <a class="mt-1">SHARE:</a>
-                  <a href="https://www.facebook.com" target="_blank" class="social-icon" aria-label="LinkedIn"><i class="fab fa-facebook-f"></i></a>
-                  <a href="https://www.tiktok.com" target="_blank" class="social-icon" aria-label="LinkedIn"><i class="fab fa-tiktok"></i></a>
-                  <a href="https://x.com" target="_blank" class="social-icon" aria-label="LinkedIn"><i class="fa fa-twitter"></i></a>
+                  <a href="https://www.facebook.com" target="_blank" rel="noopener noreferrer" class="social-icon" aria-label="LinkedIn"><i class="fab fa-facebook-f"></i></a>
+                  <a href="https://www.tiktok.com" target="_blank" rel="noopener noreferrer" class="social-icon" aria-label="LinkedIn"><i class="fab fa-tiktok"></i></a>
+                  <a href="https://x.com" target="_blank" rel="noopener noreferrer" class="social-icon" aria-label="LinkedIn"><i class="fa fa-twitter"></i></a>
                   <a href="https://www.instagram.com" target="blank" class="social-icon" aria-label="Website"><i class="fab fa-instagram"></i></a>
                 </div>
               </div>
