--- a/Projects/Asiafo.html
+++ b/Projects/Asiafo.html
@@ -206,13 +206,11 @@
                 <img src="../images/image36.webp" alt="Image 2" onclick="openLightbox(1)">
                 <img src="../images/image20.webp" alt="Image 3" onclick="openLightbox(2)">
                 <img src="../images/image13.webp" alt="Image 4" onclick="openLightbox(3)">
-                <!-- <img src="images/20.jpg" alt="Image 5" onclick="openLightbox(4)"> -->
-                <!-- <img src="images/53.jpg" alt="Image 6" onclick="openLightbox(5)"> --> 
               </div>
              
               <div id="lightbox" class="lightbox">
                 <span class="close" onclick="closeLightbox()">&times;</span>
-                <img id="lightbox-img" class="lightbox-img">
+                <img id="lightbox-img" class="lightbox-img" alt="#">
                 <button class="prev" onclick="prevImage()">&#10094;</button>
                 <button class="next" onclick="nextImage()">&#10095;</button>
               </div>
