--- a/Projects/Asutsuare.html
+++ b/Projects/Asutsuare.html
@@ -170,7 +170,7 @@
           <main id="main" class="col-md-8 ">
             <div class="article causes-details">
               <div class="article-img mt-5">
-                <img src="../images/1.jpg" alt="" />
+                <img src="../images/image68.webp" alt="" />
               </div>
               <div class="article-content">
                 <h2 class="article-title"><strong>Asutsuare Estate D/A School</strong></h2> 
@@ -202,29 +202,27 @@
 
               <!-- Lightbox -->
               <div class="photo-viewer">
-                <img src="../images/image38.webp" alt="Image 1" onclick="openLightbox(0)">
-                <img src="../images/image36.webp" alt="Image 2" onclick="openLightbox(1)">
-                <img src="../images/image20.webp" alt="Image 3" onclick="openLightbox(2)">
-                <img src="../images/image13.webp" alt="Image 4" onclick="openLightbox(3)">
-                <!-- <img src="images/20.jpg" alt="Image 5" onclick="openLightbox(4)"> -->
-                <!-- <img src="images/53.jpg" alt="Image 6" onclick="openLightbox(5)"> --> 
+                <img src="../images/image61.webp" alt="Image 1" onclick="openLightbox(0)">
+                <img src="../images/image84.webp" alt="Image 2" onclick="openLightbox(1)">
+                <img src="../images/image78.webp" alt="Image 3" onclick="openLightbox(2)">
+                <img src="../images/image34.webp" alt="Image 4" onclick="openLightbox(3)">
               </div>
              
               <div id="lightbox" class="lightbox">
                 <span class="close" onclick="closeLightbox()">&times;</span>
-                <img id="lightbox-img" class="lightbox-img">
+                <img id="lightbox-img" class="lightbox-img" alt="#">
                 <button class="prev" onclick="prevImage()">&#10094;</button>
                 <button class="next" onclick="nextImage()">&#10095;</button>
               </div>
 
               <script>
                 const images = [
-                    "../images/image38.webp",
-                    "../images/image36.webp",
-                    "../images/image20.webp",
-                    "../images/image13.webp",
-                    "../images/image26.webp",
-                    "../images/image18.webp"
+                    "../images/image61.webp",
+                    "../images/image84.webp",
+                    "../images/image78.webp",
+                    "../images/image34.webp",
+                    "../images/image56.webp",
+                    "../images/image69.webp"
                 ];
 
                   let currentIndex = 0;
