--- a/Projects/Ayensukrom.html
+++ b/Projects/Ayensukrom.html
@@ -212,7 +212,7 @@
              
               <div id="lightbox" class="lightbox">
                 <span class="close" onclick="closeLightbox()">&times;</span>
-                <img id="lightbox-img" class="lightbox-img">
+                <img id="lightbox-img" class="lightbox-img" alt="#">
                 <button class="prev" onclick="prevImage()">&#10094;</button>
                 <button class="next" onclick="nextImage()">&#10095;</button>
               </div>
