--- a/Projects/Asiafo.html
+++ b/Projects/Asiafo.html
@@ -115,7 +115,7 @@
     <div id="donateModal1" class="modal">
       <div class="modal-content">
         <span class="close-btn">&times;</span>
-        <img
+        <img alt="#"
           src="../images/Logo.png"
           style="height: 80px; width: 250px"
         />
