--- a/Projects/Asutsuare.html
+++ b/Projects/Asutsuare.html
@@ -118,7 +118,7 @@
         <img
           src="../images/Logo.png"
           style="height: 80px; width: 250px"
-        />
+         alt="#"/>
         <!-- <p>Here are the details for making your donation:</p> -->
 
         <div class="donation-details">
@@ -271,10 +271,10 @@
               <div class="widget-post">
                 <a href="Asiafo.html">
                   <div class="widget-img">
-                    <img src="../images/1.jpg" alt="" />
+                    <img src="../images/image16.webp" alt="" />
                   </div>
                   <div class="widget-content">
-                    <span>Asutsuare Estate D/A School</span>
+                    <span>Asiafo Amanfro M/A School</span>
                   </div>
                 </a>
                 
@@ -284,7 +284,7 @@
               <div class="widget-post">
                 <a href="Pokrom.html">
                   <div class="widget-img">
-                    <img src="../images/2.jpg" alt="" />
+                    <img src="../images/image11.webp" alt="" />
                   </div>
                   <div class="widget-content">
                     <span>Pokrom M/A Junior High School</span>
@@ -296,7 +296,7 @@
               <div class="widget-post">
                 <a href="Bunso.html">
                   <div class="widget-img">
-                    <img src="../images/20.jpg" alt="" />
+                    <img src="../images/image44.webp" alt="" />
                   </div>
                   <div class="widget-content">
                     <span>Bunso M/A School</span>
@@ -308,7 +308,7 @@
               <div class="widget-post">
                 <a href="Ayensukrom.html">
                   <div class="widget-img">
-                    <img src="../images/1.jpg" alt="" />
+                    <img src="../images/image15.webp" alt="" />
                   </div>
                   <div class="widget-content">
                     <span>Ayensukrom M/A School</span>
@@ -319,7 +319,7 @@
               <div class="widget-post">
                 <a href="Dzita.html">
                   <div class="widget-img">
-                    <img src="../images/1.jpg" alt="" />
+                    <img src="../images/image32.webp" alt="" />
                   </div>
                   <div class="widget-content">
                     <span>Dzita Learning Comm. School</span>
@@ -331,7 +331,7 @@
               <div class="widget-post">
                 <a href="Kwamo.html">
                   <div class="widget-img">
-                    <img src="../images/1.jpg" alt="" />
+                    <img src="../images/image46.webp" alt="" />
                   </div>
                   <div class="widget-content">
                     <span>Kwamo M/A School</span>
@@ -380,10 +380,10 @@
                 <div>
                   <ul class="footer-social">
                     <strong>
-                    <li><h1><a class="footer-icon" href="https://www.facebook.com/profile.php?id=100067770571763" target="_blank" rel="facebook"><i class="fab fa-facebook"></i></a></h1></li>
-                    <li><h1><a class="footer-icon" href="https://www.tiktok.com/@le.shelter.founda?_t=ZM-8sl65FqR7XZ&_r=1" target="_blank" rel="tiktok" ><i class="fab fa-tiktok"></i></a></h1></li>
-                    <li><h1><a class="footer-icon" href="https://x.com/le_shelter?t=dWlkQidVKnRSYGSbFpbjHg&s=09" target="_blank" rel="twitter"><i class="fa fa-twitter"></i></a></h1></li>
-                    <li><h1><a class="footer-icon" href="https://www.instagram.com/le.shelter.foundation?igsh=bGxneno2OTN5NjF5" target="_blank" rel="instagram"><i class="fab fa-instagram"></i></a></h1></li>
+                    <li><h1><a class="footer-icon" href="https://www.facebook.com/profile.php?id=100067770571763" target="_blank" rel="noopener noreferrer"><i class="fab fa-facebook"></i></a></h1></li>
+                    <li><h1><a class="footer-icon" href="https://www.tiktok.com/@le.shelter.founda?_t=ZM-8sl65FqR7XZ&_r=1" target="_blank" rel="noopener noreferrer"><i class="fab fa-tiktok"></i></a></h1></li>
+                    <li><h1><a class="footer-icon" href="https://x.com/le_shelter?t=dWlkQidVKnRSYGSbFpbjHg&s=09" target="_blank" rel="noopener noreferrer"><i class="fa fa-twitter"></i></a></h1></li>
+                    <li><h1><a class="footer-icon" href="https://www.instagram.com/le.shelter.foundation?igsh=bGxneno2OTN5NjF5" target="_blank" rel="noopener noreferrer"><i class="fab fa-instagram"></i></a></h1></li>
                     </strong>
                   </ul>
                 </div>
@@ -391,7 +391,7 @@
                 
                   <form class="footer-volunteer">
                     <button class="footer-button">
-                      <h6 class="mt-2"><strong><a href="https://docs.google.com/forms/d/e/1FAIpQLSf8BNb_TOu1TX99yPvh-6kXlTA_dcG3nNBWbJJK5OmTPgmAxQ/viewform?pli=1" target="_blank" >
+                      <h6 class="mt-2"><strong><a href="https://docs.google.com/forms/d/e/1FAIpQLSf8BNb_TOu1TX99yPvh-6kXlTA_dcG3nNBWbJJK5OmTPgmAxQ/viewform?pli=1" target="_blank" rel="noopener noreferrer">
                         ❤️ Become A Volunteer ❤️</a></strong></h6>
                     </button>
                   </form>
