--- a/Projects/Bunso.html
+++ b/Projects/Bunso.html
@@ -115,7 +115,7 @@
     <div id="donateModal1" class="modal">
       <div class="modal-content">
         <span class="close-btn">&times;</span>
-        <img
+        <img alt="#"
           src="../images/Logo.png"
           style="height: 80px; width: 250px"
         />
@@ -170,7 +170,7 @@
           <main id="main" class="col-md-8 ">
             <div class="article causes-details">
               <div class="article-img mt-5">
-                <img src="../images/1.jpg" alt="" />
+                <img src="../images/image71.webp" alt="" />
               </div>
               <div class="article-content">
                 <h2 class="article-title"><strong>Bunso M/A School</strong></h2> 
@@ -202,29 +202,27 @@
 
               <!-- Lightbox -->
               <div class="photo-viewer">
-                <img src="../images/image38.webp" alt="Image 1" onclick="openLightbox(0)">
-                <img src="../images/image36.webp" alt="Image 2" onclick="openLightbox(1)">
-                <img src="../images/image20.webp" alt="Image 3" onclick="openLightbox(2)">
-                <img src="../images/image13.webp" alt="Image 4" onclick="openLightbox(3)">
-                <!-- <img src="images/20.jpg" alt="Image 5" onclick="openLightbox(4)"> -->
-                <!-- <img src="images/53.jpg" alt="Image 6" onclick="openLightbox(5)"> --> 
+                <img src="../images/image47.webp" alt="Image 1" onclick="openLightbox(0)">
+                <img src="../images/image77.webp" alt="Image 2" onclick="openLightbox(1)">
+                <img src="../images/image72.webp" alt="Image 3" onclick="openLightbox(2)">
+                <img src="../images/image54.webp" alt="Image 4" onclick="openLightbox(3)">
               </div>
              
               <div id="lightbox" class="lightbox">
                 <span class="close" onclick="closeLightbox()">&times;</span>
-                <img id="lightbox-img" class="lightbox-img">
+                <img id="lightbox-img" class="lightbox-img" alt="#">
                 <button class="prev" onclick="prevImage()">&#10094;</button>
                 <button class="next" onclick="nextImage()">&#10095;</button>
               </div>
 
               <script>
                 const images = [
-                    "../images/image38.webp",
-                    "../images/image36.webp",
-                    "../images/image20.webp",
-                    "../images/image13.webp",
-                    "../images/image26.webp",
-                    "../images/image18.webp"
+                    "../images/image47.webp",
+                    "../images/image77.webp",
+                    "../images/image72.webp",
+                    "../images/image54.webp",
+                    "../images/image74.webp",
+                    "../images/image76.webp"
                 ];
 
                   let currentIndex = 0;
@@ -274,7 +272,7 @@
               <div class="widget-post">
                 <a href="Asiafo.html">
                   <div class="widget-img">
-                    <img src="../images/1.jpg" alt="" />
+                    <img src="../images/image16.webp" alt="" />
                   </div>
                   <div class="widget-content">
                     <span>Asiafo Amanfro M/A School</span>
@@ -287,7 +285,7 @@
               <div class="widget-post">
                 <a href="Asutsuare.html">
                   <div class="widget-img">
-                    <img src="../images/1.jpg" alt="" />
+                    <img src="../images/image70.webp" alt="" />
                   </div>
                   <div class="widget-content">
                     <span>Asutsuare Estate D/A School</span>
@@ -300,7 +298,7 @@
               <div class="widget-post">
                 <a href="Pokrom.html">
                   <div class="widget-img">
-                    <img src="../images/2.jpg" alt="" />
+                    <img src="../images/image11.webp" alt="" />
                   </div>
                   <div class="widget-content">
                     <span>Pokrom M/A Junior High School</span>
@@ -313,7 +311,7 @@
               <div class="widget-post">
                 <a href="Ayensukrom.html">
                   <div class="widget-img">
-                    <img src="../images/1.jpg" alt="" />
+                    <img src="../images/image15.webp" alt="" />
                   </div>
                   <div class="widget-content">
                     <span>Ayensukrom M/A School</span>
@@ -324,7 +322,7 @@
               <div class="widget-post">
                 <a href="Dzita.html">
                   <div class="widget-img">
-                    <img src="../images/1.jpg" alt="" />
+                    <img src="../images/image32.webp" alt="" />
                   </div>
                   <div class="widget-content">
                     <span>Dzita Learning Comm. School</span>
@@ -336,7 +334,7 @@
               <div class="widget-post">
                 <a href="Kwamo.html">
                   <div class="widget-img">
-                    <img src="../images/1.jpg" alt="" />
+                    <img src="../images/image46.webp" alt="" />
                   </div>
                   <div class="widget-content">
                     <span>Kwamo M/A School</span>
@@ -384,10 +382,10 @@
                 <div>
                   <ul class="footer-social">
                     <strong>
-                    <li><h1><a class="footer-icon" href="https://www.facebook.com/profile.php?id=100067770571763" target="_blank" rel="facebook"><i class="fab fa-facebook"></i></a></h1></li>
-                    <li><h1><a class="footer-icon" href="https://www.tiktok.com/@le.shelter.founda?_t=ZM-8sl65FqR7XZ&_r=1" target="_blank" rel="tiktok" ><i class="fab fa-tiktok"></i></a></h1></li>
-                    <li><h1><a class="footer-icon" href="https://x.com/le_shelter?t=dWlkQidVKnRSYGSbFpbjHg&s=09" target="_blank" rel="twitter"><i class="fa fa-twitter"></i></a></h1></li>
-                    <li><h1><a class="footer-icon" href="https://www.instagram.com/le.shelter.foundation?igsh=bGxneno2OTN5NjF5" target="_blank" rel="instagram"><i class="fab fa-instagram"></i></a></h1></li>
+                    <li><h1><a class="footer-icon" href="https://www.facebook.com/profile.php?id=100067770571763" target="_blank" rel="noopener noreferrer"><i class="fab fa-facebook"></i></a></h1></li>
+                    <li><h1><a class="footer-icon" href="https://www.tiktok.com/@le.shelter.founda?_t=ZM-8sl65FqR7XZ&_r=1" target="_blank" rel="noopener noreferrer"><i class="fab fa-tiktok"></i></a></h1></li>
+                    <li><h1><a class="footer-icon" href="https://x.com/le_shelter?t=dWlkQidVKnRSYGSbFpbjHg&s=09" target="_blank" rel="noopener noreferrer"><i class="fa fa-twitter"></i></a></h1></li>
+                    <li><h1><a class="footer-icon" href="https://www.instagram.com/le.shelter.foundation?igsh=bGxneno2OTN5NjF5" target="_blank" rel="noopener noreferrer"><i class="fab fa-instagram"></i></a></h1></li>
                     </strong>
                   </ul>
                 </div>
@@ -395,7 +393,7 @@
                 
                   <form class="footer-volunteer">
                     <button class="footer-button">
-                      <h6 class="mt-2"><strong><a href="https://docs.google.com/forms/d/e/1FAIpQLSf8BNb_TOu1TX99yPvh-6kXlTA_dcG3nNBWbJJK5OmTPgmAxQ/viewform?pli=1" target="_blank" >
+                      <h6 class="mt-2"><strong><a href="https://docs.google.com/forms/d/e/1FAIpQLSf8BNb_TOu1TX99yPvh-6kXlTA_dcG3nNBWbJJK5OmTPgmAxQ/viewform?pli=1" target="_blank" rel="noopener noreferrer">
                         ❤️ Become A Volunteer ❤️</a></strong></h6>
                     </button>
                   </form>
